# filmer

./: .editorconfig  .env.sample  .pre-commit-config.yaml  Dockerfile  api.py  docker-compose.yml  justfile  manage.py  pyproject.toml
.github/workflows/: django.yml  docker-publish.yml  tests.yml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
filmer/: asgi.py  settings.py  urls.py  wsgi.py
omdb/: __main__.py  api.py
omdb/fixtures/: movie_response.json  response.json
omdb/tests/: test_yts_api.py
omdb/tests/cassettes/: test_search_movie.yaml
scripts/: gunicorn_start.sh  wait_for_db.sh
tmdb/: api.py
tmdb/tests/: test_tmdb_api.py
tmdb/tests/cassettes/: test_tmdb_movie_search.yaml  test_tmdb_trending_movies.yaml
ui/: views.py
ui/static/ui/: cover.css
ui/templates/ui/: base.html  footer.html  head.html  main.html  movie.html  movies.html
ui/templatetags/: tmdb.py
yts/: __main__.py  api.py  constants.py
yts/fixtures/: response.json
yts/tests/: test_api.py  test_omdb_api.py
yts/tests/cassettes/: test_get_movie.yaml
