[tool.poetry]
name = "filmer"
version = "0.1.0"
description = "film info"
authors = ["eduzen <eduardo.a.enriquez@gmail.com>"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "filmer.settings"

[tool.poetry.dependencies]
python = "^3.8.11"
Django = "^3.2.6"
pendulum = "^2.1.2"
django-extensions = "^3.1.3"
django-crispy-forms = "^1.12.0"
django-debug-toolbar = "^3.2.2"
django-filter = "^2.4.0"
django-health-check = "^3.16.4"
dj-database-url = "^0.5.0"
djangorestframework = "^3.12.4"
whitenoise = "^5.3.0"
Markdown = "^3.3.4"
gunicorn = "^20.1.0"
sentry-sdk = "^1.3.1"
requests = "^2.26.0"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"
psycopg2-binary = "^2.9.1"
tmdbsimple = "^2.8.0"
gevent = "^21.8.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pytest = "^7.0.0"
pytest-django = "^4.4.0"
pytest-sugar = "^0.9.4"
pytest_async = "^0.1.1"
pytest-mock = "^3.6.1"
pytest-factoryboy = "^2.1.0"
pytest-vcr = "^1.0.2"
wdb = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py39']
